# salmiac

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
demo/: CMakeLists.txt
demo/common/: CMakeLists.txt
demo/common/include/: camera_controller.h
demo/common/src/: camera_controller.cpp
demo/conquest/: CMakeLists.txt
demo/conquest/include/: artisan.h  cell_position.h  conquest.h  game.h  neural_net.h  orchestrator.h
demo/conquest/src/: artisan.cpp  conquest.cpp  game.cpp  neural_net.cpp  orchestrator.cpp  template_definitions.cpp
demo/include/: n_body_sim.h  oct.h
demo/nbody/: CMakeLists.txt
demo/nbody/include/: n_body_sim.h  node.h  oct.h
demo/nbody/src/: n_body_sim.cpp
demo/src/: n_body_sim.cpp  oct.cpp
res/models/case/: j-case.mtl
res/shaders/: bad_lighting_frag.glsl  basic_lighting.fsh  basic_lighting.vsh  basic_text_frag.glsl  basic_text_vert.glsl  color_lighting_frag.glsl  core.frag  core.fs  core.vs  instanced_vert.glsl  liquid.vert  liquid_frag.glsl
src/: CMakeLists.txt
src/components/: CMakeLists.txt
src/components/include/: transform.h
src/components/src/: transform.cpp
src/core/: CMakeLists.txt
src/core/include/: application.h
src/core/src/: application.cpp
src/gfx/: CMakeLists.txt
src/gfx/include/: camera.h  font.h  font_loader.h  gfx.h  instanced.h  mesh.h  mesh_binder.h  model.h  model_loader.h  primitives.h  shader_loader.h  shader_program.h  text.h  texture.h  texture_loader.h  vertex.h
src/gfx/src/: camera.cpp  font.cpp  font_loader.cpp  mesh_binder.cpp  model_loader.cpp  primitives.cpp  shader_loader.cpp  text.cpp  texture_loader.cpp
src/input/: CMakeLists.txt
src/input/include/: input_manager.h
src/input/src/: input_manager.cpp
src/util/: CMakeLists.txt
src/util/include/: file_reader.h  log.h  thread_pool.h  ts_queue.h
src/util/src/: file_reader.cpp  log.cpp
